public static class AnimatorTrigger
{
    public const string DANCE = "Dance";
    public const string FALL = "Fall";
    public const string DEATH = "Death";
    public const string HANG1 = "Hang1";
    public const string HANG2 = "Hang2";
    public const string RUN = "Run";
}

public static class PlayerPrefStrings
{
    public const string LEVEL = "Level";
    public const string GEM = "GemCount";
    public const string SOUND = "SoundOn";
    public const string VIBRATION = "VibrationOn";

}